methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: '<-' expected but ')' found.
  for(i< 1 to 6){
               ^MethodsReturning:10: error: illegal start of simple expression
} 
^