methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for(i< 1 to 6){
    avance()
    if estSurBiscuit()==true{
      vuBiscuit=true
      
    }
  }
}